# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Added patch from Andrew Gaffney <agaffney@gentoo.org> for bug #166426.

  06 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot2_template.spec,
  examples/netboot_template.spec, examples/snapshot_template.spec,
  examples/stage4_template.spec, examples/tinderbox_template.spec:
  Update the examples to have 2006.1 for the dates. This is catalyst 2.0.2, so
  everyone enjoy it.

  06 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf,
  targets/support/livecdfs-update.sh:
  Make sure the user owns his home directory for bug #147195.

  30 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf,
  +files/catalystrc, modules/catalyst_support.py:
  Re-arranged catalyst.conf to make it easier to follow while looking at the
  online reference and added a default catalystrc file, which does nothing.

  23 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/stage3_target.py, modules/tinderbox_target.py:
  Added patch from Andrew Gaffney <agaffney@gentoo.org> to fix up some of the
  tab/space nastiness. This is for bug #161915.

  23 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fixed new cbuild code with another patch from Mike Frysinger
  <vapier@gentoo.org> to allow the usage of subarches.

  09 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
  arch/amd64.py, arch/arm.py, arch/hppa.py, arch/ia64.py, arch/mips.py,